--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     ]
   },
   "devDependencies": {
-    "jsonp": "^0.2.1"},
+    "jsonp": "^0.2.1"
+  },
   "jest": {
     "roots": [
       "<rootDir>/src"
